# Hermes

./: .gitignore  Cargo.toml  README.md  config.example.toml  pyproject.toml
hermes_mcp/: server.py
mcp/: server.py
src/: api.rs  client.rs  display.rs  logger.rs  main.rs
src/commands/: browse.rs  log.rs  mod.rs  poll.rs  serve.rs
tests/: test_write_gate.py
