[package]
name = "hermes"
version = "0.1.0"
edition = "2021"
description = "OPC-UA bridge — poll, serve, log, and browse with MCP agent access"
license = "MIT"
authors = ["AddisonTech"]

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
opcua = { version = "0.12", features = ["client"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
colored = "2"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
parking_lot = "0.12"
anyhow = "1"
